# refinement

./: ISSUES  Refinement.hs  pc.hs  refinement.cabal  stack.yaml  xc70.hs
Control/Monad/: Refinement.hs
Control/Monad/Refinement/: CNF.hs  Class.hs  Combinators.hs  DNF.hs  HardSAT.hs  Orphans.hs
Data/: BitMatrix.hs  Component.hs  FactorGraph.hs  Range.hs
