
name:                refinement
version:             0.1.0.0
synopsis:            Refinement Monad Transformer + Abstract Component Algebra
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Control.Monad.Refinement,
    Control.Monad.Refinement.Orphans,
    Control.Monad.Refinement.Combinators,
    Control.Monad.Refinement.Class,
    Control.Monad.Refinement.DNF,
    Data.BitMatrix
    Data.Component
    Data.Range
    Refinement
  other-extensions:
    FlexibleInstances,
    TypeSynonymInstances,
    FlexibleContexts
  ghc-options:        -Wall -O2 -fno-warn-unused-do-bind -funbox-strict-fields
  build-depends:      base >=4.8, transformers, pointed, semigroupoids,
                      containers, semigroups, vector, text
  default-language:    Haskell2010
