
name:                refinement
version:             0.1.0.0
synopsis:            Refinement Monad Transformer + Abstract Component Algebra
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Control.Monad.Refinement,
    Control.Monad.Refinement.Combinators,
    Control.Monad.Refinement.Class,
    Control.Monad.Refinement.CNF,
    Control.Monad.Refinement.DNF,
    Control.Monad.Refinement.HardSAT,
    Data.BitMatrix
    Data.Component
    Data.Range
    Refinement
  other-extensions:
    FlexibleInstances,
    TypeSynonymInstances,
    FlexibleContexts
  ghc-options:        -Wall -O2 -fno-warn-unused-do-bind -funbox-strict-fields
  build-depends:      base >=4.8
                    , array
                    , containers
                    , matrix
                    , mersenne-random
                    , monad-loops
                    , pointed
                    , semigroupoids
                    , semigroups
                    , text
                    , transformers
                    , vector
  default-language:    Haskell2010
